--- a/apiConsumer/css/style.css
+++ b/apiConsumer/css/style.css
@@ -15,6 +15,7 @@ background: #f3f3f3;
 	background: #403F4C;
 }
 
+
 .header_menu{
 	list-style: none;
 	margin-top: 25px;
@@ -137,3 +138,63 @@ background: #f3f3f3;
 		content: '(asc)';
 	}
 	
+.datasets-nav{
+	display: flex;
+	justify-content: space-around;
+	flex-flow: row wrap;
+}
+
+.datasets-nav a{
+	text-decoration: none;
+}
+
+.population_link{
+	width: 50%;
+	height: 300px;
+	background-image: url(../img/populationBanner.jpg);
+	background-repeat: no-repeat;
+  	background-size: cover;
+  	background-position: center;
+}
+
+.obesity_link{
+	width: 50%;
+	height: 300px;
+	background-image: url(../img/obesityBanner.jpg);
+	background-repeat: no-repeat;
+  	background-size: cover;
+  	background-position: center;
+
+}
+
+.happiness_link{
+	width: 100%;
+	height: 300px;
+	background-image: url(../img/happinessBanner.png);
+	background-repeat: no-repeat;
+  	background-size: cover;
+  	background-position: center;
+}
+
+.hover_overlay{
+	opacity: 0;
+	z-index: 5;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(255, 0, 0, 0.3);
+	color: #fff;
+	text-align: center;
+	transition: 0.3s;
+}
+
+.hover_overlay h1{
+	margin: 0;
+	text-align: center;
+	vertical-align: middle;
+	line-height: 300px; 
+	text-decoration: none;
+}
+
+.act_hov:hover .hover_overlay{
+	opacity: 1;
+}
